--- a/proposta-02/index.html
+++ b/proposta-02/index.html
@@ -42,7 +42,7 @@
     <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
       <!-- Logo -->
       <a href="#" class="flex items-center gap-3 text-white no-underline">
-        <img src="materiale/logo.png" alt="Studio Dentistico Marin" class="h-10 w-auto">
+        <img src="img/logo.png" alt="Studio Dentistico Marin" class="h-10 w-auto">
         <div>
           <span class="font-heading font-bold text-lg leading-none block">Studio Marin</span>
           <span class="text-xs text-white/60 leading-none">Odontoiatria Conegliano</span>
@@ -153,7 +153,7 @@
       <div class="hidden lg:flex justify-end">
         <div class="hero-img-wrapper rounded-2xl overflow-hidden relative z-10">
           <img
-            src="materiale/foto-dentista-conegliano.png"
+            src="img/foto-dentista-conegliano.png"
             alt="Dr. Gianluca Marin — Studio Dentistico Conegliano"
             class="w-[420px] h-[500px] object-cover object-top rounded-2xl relative z-10"
           >
@@ -306,7 +306,7 @@
         <div class="fade-up">
           <div class="relative">
             <img
-              src="materiale/foto-equipe.jpeg"
+              src="img/foto-equipe.jpeg"
               alt="Equipe dello Studio Dentistico Marin"
               class="w-full rounded-2xl shadow-xl"
             >
@@ -517,7 +517,7 @@
         <!-- Col 1 — Brand -->
         <div class="md:col-span-1">
           <div class="flex items-center gap-3 mb-4">
-            <img src="materiale/logo.png" alt="Studio Marin" class="h-9 w-auto">
+            <img src="img/logo.png" alt="Studio Marin" class="h-9 w-auto">
             <span class="font-heading font-bold text-white text-lg">Studio Marin</span>
           </div>
           <p class="text-sm leading-relaxed">
