Force deploy - maybe

--- a/proposta-03/index.html
+++ b/proposta-03/index.html
@@ -268,7 +268,7 @@
   </section>
 
   <!-- ============================================================
-       FOOTER
+       FOOTER.
        ============================================================ -->
   <footer class="footer">
     <div class="container">
